--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,204 @@
+@font-face {
+  font-family: Rubik;
+  src: url("../static/Rubik-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Rubik";
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+p {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+.main {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*INPUT SECTION CSS*/
+.inputSection {
+  background-color: white;
+  flex-grow: 4;
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  gap: 16px;
+}
+.inputSectionActions{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.inputSection img{
+  height: auto;
+  width: 56px;
+}
+.inputSection textarea{
+  flex-grow: 1;
+  align-self: stretch;
+  resize: none;
+  padding: 8px;
+  font-size: 1rem;
+}
+.inputSection button{
+  color: white;
+  background-color: #5357b6;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 8px;
+}
+/*COMMENT SECTION CSS*/
+.comments {
+  padding: 20px;
+  flex-grow: 6;
+  overflow-y: scroll;
+}
+.comment {
+  margin-top: 5px;
+  width: 100%;
+  background-color: white;
+  border-radius: 8px;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+}
+.staticCommentSection {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+.commentorDescription {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.commentDescription {
+  color: #67727e;
+  line-height: 1.4rem;
+  margin: 1rem 0px;
+}
+.profilePicture {
+  width: 32px;
+}
+.username {
+  color: #334253;
+  font-weight: bold;
+}
+.tag {
+  background-color: #5357b6;
+  border-radius: 2px;
+  padding: 0.1rem 0.2rem;
+  font-size: small;
+  color: white;
+}
+.commentDate {
+  font-weight: 400;
+  color: #67727e;
+}
+.interactCommentSection {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.interactCommentSection img {
+  width: 100%;
+  height: auto;
+}
+.rateComment {
+  background-color: #f5f6fa;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+}
+.voteSymbol {
+  color: #c5c6ef;
+  padding: 5px 0.6em;
+}
+.upvotes {
+  color: #5357b6;
+  font-size: 14px;
+  font-weight: bold;
+}
+.reply {
+  color: #5357b6;
+  font-size: 16px;
+  font-weight: bold;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  padding: 4px 0px;
+}
+.selfActions {
+  display: flex;
+  gap: 16px;
+}
+.selfActions > div {
+  display: flex;
+  gap: 8px;
+  font-weight: bold;
+}
+.delete {
+  color: #ed6368;
+}
+.edit {
+  color: #5357b6;
+}
+.commentChildren {
+  padding-left: 10%;
+  border-left: 2px solid #e9ebf0;
+}
+.parentCommentName {
+  color: #5357b6;
+  font-weight: bold;
+}
+@media screen and (min-width: 600px) {
+  .comment,.inputSection {
+    position: relative;
+  }
+  .interactCommentSection,.inputSectionActions {
+    z-index: 1;
+    justify-content: space-between;
+    align-items: flex-start;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 1.2rem;
+  }
+  .inputSectionActions{
+    padding: 24px;
+  }
+  .rateComment {
+    flex-direction: column;
+  }
+  .staticCommentSection{
+    padding: 0px 3rem;
+  }
+  .inputSection textarea{
+    margin-left: 5rem;
+    margin-right: 7rem;
+  }
 }
