--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+  background-color: #f2f2f2;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -37,38 +37,86 @@ code {
   display: flex;
   flex-direction: column;
 }
+.overlayWrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.overlay {
+  background-color: white;
+  border-radius: 10px;
+  padding: 2rem;
+  margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.overlay h2 {
+  color: #334253;
+}
+.overlay p {
+  color: #67727e;
+}
+.overlay div {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+.overlay button {
+  width: 100%;
+  padding: 1rem 10px;
+  font-size: small;
+  border: none;
+  color: white;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.cancelOverlayButton {
+  background-color: #67727e;
+}
+.deleteOverlayButton {
+  background-color: #ed6368;
 
+}
 /*INPUT SECTION CSS*/
 .inputSection {
   background-color: white;
   flex-grow: 4;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: max-content 1fr max-content;
+  grid-template-rows: 2fr 1fr;
   padding: 24px;
   gap: 16px;
 }
-.inputSectionActions{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.inputSection img {
+  width: 2.5rem;
+  height: 2.5rem;
+  grid-row: 2;
+  grid-column: 1;
 }
-.inputSection img{
-  height: auto;
-  width: 56px;
-}
-.inputSection textarea{
-  flex-grow: 1;
+.inputSection textarea {
+  grid-column: 1/4;
+  grid-row: 1;
   align-self: stretch;
   resize: none;
   padding: 8px;
   font-size: 1rem;
 }
-.inputSection button{
+.inputSection button {
   color: white;
   background-color: #5357b6;
-  padding: 1rem 2rem;
+  padding: 0.4rem 2rem;
   border: none;
   border-radius: 8px;
+  grid-row: 2;
+  grid-column: 3;
+  cursor: pointer;
 }
 /*COMMENT SECTION CSS*/
 .comments {
@@ -82,26 +130,32 @@ code {
   background-color: white;
   border-radius: 8px;
   padding: 16px;
-  display: flex;
-  flex-direction: column;
-}
-.staticCommentSection {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-rows: repeat(3, fit-content(100%));
+  grid-auto-flow: row;
 }
 .commentorDescription {
   display: flex;
-  align-items: center;
   gap: 8px;
+  align-self: flex-start;
 }
-.commentDescription {
+.content {
   color: #67727e;
   line-height: 1.4rem;
   margin: 1rem 0px;
+  grid-row: 2;
+  grid-column: 1/3;
+}
+.userDetails {
+  display: flex;
+  grid-column: 1/3;
+  align-items: center;
+  gap: 16px;
 }
 .profilePicture {
-  width: 32px;
+  width: 2.5rem;
+  height: 2.5rem;
 }
 .username {
   color: #334253;
@@ -118,11 +172,6 @@ code {
   font-weight: 400;
   color: #67727e;
 }
-.interactCommentSection {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
 .interactCommentSection img {
   width: 100%;
   height: auto;
@@ -130,12 +179,15 @@ code {
 .rateComment {
   background-color: #f5f6fa;
   border-radius: 8px;
+  grid-row: 3;
   display: flex;
   align-items: center;
+  padding: 4px;
 }
 .voteSymbol {
   color: #c5c6ef;
   padding: 5px 0.6em;
+  cursor: pointer;
 }
 .upvotes {
   color: #5357b6;
@@ -150,55 +202,91 @@ code {
   gap: 8px;
   align-items: center;
   padding: 4px 0px;
+  cursor: pointer;
 }
-.selfActions {
+.actions {
   display: flex;
+  height: 1rem;
+  grid-row: 3;
+  grid-column: 3;
   gap: 16px;
+  align-self: center;
 }
-.selfActions > div {
+.actions img {
+  height: 0.9rem;
+  align-self: center;
+}
+.actions > div {
   display: flex;
-  gap: 8px;
   font-weight: bold;
+  gap: 4px;
 }
 .delete {
   color: #ed6368;
+  cursor: pointer;
 }
 .edit {
   color: #5357b6;
+  cursor: pointer;
+}
+.content textarea {
+  width: 100%;
+  min-height: 100%;
+  padding: 8px;
+  resize: none;
+  font-size: 1rem;
+  overflow-y: visible;
 }
 .commentChildren {
-  padding-left: 10%;
-  border-left: 2px solid #e9ebf0;
+  margin-left: 2%;
+  padding-left: 2%;
+  border-left: 2px solid #979797;
 }
 .parentCommentName {
   color: #5357b6;
   font-weight: bold;
 }
 @media screen and (min-width: 600px) {
-  .comment,.inputSection {
-    position: relative;
+  .comment {
+    grid-template-columns: max-content 1fr max-content;
   }
-  .interactCommentSection,.inputSectionActions {
-    z-index: 1;
-    justify-content: space-between;
-    align-items: flex-start;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 1.2rem;
-  }
-  .inputSectionActions{
-    padding: 24px;
+  .userDetails {
+    grid-row: 1;
+    grid-column: 2;
   }
   .rateComment {
     flex-direction: column;
+    grid-row: 1/3;
+    grid-column: 1;
+    margin: 0px 24px auto;
   }
-  .staticCommentSection{
-    padding: 0px 3rem;
+  .content {
+    grid-row: 2/4;
+    grid-column: 2/4;
   }
-  .inputSection textarea{
-    margin-left: 5rem;
-    margin-right: 7rem;
+  .actions {
+    grid-row: 1;
+    grid-column: 3;
+  }
+  .inputSection img {
+    grid-row: 1;
+    grid-column: 1;
+  }
+  .inputSection textarea {
+    grid-column: 2/3;
+    grid-row: 1/3;
+  }
+  .inputSection button {
+    grid-row: 1;
+    grid-column: 3;
+  }
+  .overlay{
+    width: 40vw;
+  }
+}
+
+@media (max-width: 1024px) {
+  .overlay {
+    width: 60vw;
   }
 }
